--- a/src/components/Travelers/travelers.scss
+++ b/src/components/Travelers/travelers.scss
@@ -1,3 +1,19 @@
+@import "../../styles/variables.scss";
+
+.travelers {
+  &::before {
+    content: '';
+    background: linear-gradient($background-brown, $background-brown),
+    url(../../../public/img/background/background_03.jpg) no-repeat center center / cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+  }
+}
+
 .travellers-title {
   padding-top: 1rem;
   text-align: center;
